[project]
name = "cog2h3"
version = "0.0.3"
dynamic = ["version"]
description = "Command line script to convert Cloud Optimized Geotiff to h3 cells and insert to PosgreSQL"
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
dependencies = [
    "h3>=3.7.0",
    "h3ronpy>=0.21.0",
    "rasterio>=1.3.0",
    "asyncio>=3.0.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
]
keywords = ["h3", "index", "postgresql", "cog", "tiff", "raster"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/kshitijrajsharma/cog2h3"
documentation = "https://github.com/kshitijrajsharma/cog2h3"
repository = "https://github.com/kshitijrajsharma/cog2h3"

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.1",
    "coverage-badge>=1.1.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.2",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-exclude>=1.0.2",
]

[project.scripts]
cog2h3 = "cog2h3:main"  

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "cog2h3"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "cog2h3/__version__.py",
]

[tool.pdm]
version = {from = "cog2h3/__version__.py"}

[tool.pdm.build]
includes = ["cog2h3"]
source-includes = ["tests", "LICENSE", "README.md"]

[tool.black]
line-length = 132
target-versions = ["py39", "py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py39"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "cog2h3/__version__.py",
]

[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["cog2h3"]

[tool.coverage.report]
show_missing = true
